src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-113.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incd=+2\")"
---
items:
  - loc: "#units incd=+2"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Meters
          value: 2
        loc: incd=+2
        locs:
          correction: "+2"
          option: incd
        option: PrimaryDistanceCorrection
    type: UnitsDirective
