src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-115.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incd=-2.3\")"
---
items:
  - loc: "#units incd=-2.3"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Meters
          value: -2.3
        loc: incd=-2.3
        locs:
          correction: "-2.3"
          option: incd
        option: PrimaryDistanceCorrection
    type: UnitsDirective
