src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-117.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units d=f incd=2\")"
---
items:
  - loc: "#units d=f incd=2"
    locs:
      directive: "#units"
    options:
      - loc: d=f
        locs:
          option: d
          unit: f
        option: PrimaryDistanceUnit
        unit: Feet
      - correction:
          unit: Feet
          value: 2
        loc: incd=2
        locs:
          correction: "2"
          option: incd
        option: PrimaryDistanceCorrection
    type: UnitsDirective
