src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-118.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units d=f incd=2m\")"
---
items:
  - loc: "#units d=f incd=2m"
    locs:
      directive: "#units"
    options:
      - loc: d=f
        locs:
          option: d
          unit: f
        option: PrimaryDistanceUnit
        unit: Feet
      - correction:
          unit: Meters
          value: 2
        loc: incd=2m
        locs:
          correction: 2m
          option: incd
        option: PrimaryDistanceCorrection
    type: UnitsDirective
