src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-12.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units order=enu\")"
---
items:
  - loc: "#units order=enu"
    locs:
      directive: "#units"
    options:
      - loc: order=enu
        locs:
          option: order
          order: enu
        option: RectilinearOrder
        order:
          - Easting
          - Northing
          - Elevation
    type: UnitsDirective
